Added line of sma of period 100 days
Added the function of analyseStrategy of sma of different periods

--- a/public/css/nifty.css
+++ b/public/css/nifty.css
@@ -19,6 +19,12 @@ svg {
 
 .close{
     fill: none;
+    stroke: black;
+    stroke-width: 2px;
+}
+
+.sma{
+    fill: none;
     stroke: blue;
     stroke-width: 2px;
 }
