--- a/public/css/nifty.css
+++ b/public/css/nifty.css
@@ -1,7 +1,7 @@
 html{
     margin: 15px;
 }
-svg {
+#chart-area svg {
     border: 1px solid grey;
 }
 .axis-label{
@@ -29,12 +29,12 @@ svg {
     stroke-width: 2px;
 }
 
-#slider-container{
+/* #slider-container{
     position: relative;
     background-color: gray;
     height: 20px;
     width: 1000px;
-}
+} */
 
 .input{
     display: flex;
