--- a/public/css/nifty.css
+++ b/public/css/nifty.css
@@ -29,13 +29,6 @@ html{
     stroke-width: 2px;
 }
 
-/* #slider-container{
-    position: relative;
-    background-color: gray;
-    height: 20px;
-    width: 1000px;
-} */
-
 .input{
     display: flex;
     align-items: center;
@@ -48,4 +41,25 @@ html{
 
 #offset{
     width: 80px;
+}
+
+table {
+    margin-top: 15px;
+}
+
+.white {
+    background: rgb(255, 255, 255);
+}
+
+.whitesmoke {
+    background: whitesmoke;
+}
+
+.tables {
+    display: flex;
+    flex-direction: row;
+}
+
+table {
+    margin: 20px;
 }
