--- a/public/css/nifty.css
+++ b/public/css/nifty.css
@@ -63,3 +63,27 @@ table {
 table {
     margin: 20px;
 }
+
+.x-axis .tick line{
+    stroke: lightgray;
+}
+
+.y-axis .tick line{
+    stroke: lightgray;
+}
+
+.user-input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    margin-top: 100px;
+}
+
+label{
+    font-weight: bold;
+}
+
+.user-input input{
+    width: 100px;
+}
